--- a/templates/movie/details.html.twig
+++ b/templates/movie/details.html.twig
@@ -13,7 +13,7 @@
                 <li>Id : {{ movie.id }}</li>
                 <li>Released At : {{ movie.releasedAt|date('d M Y') }}</li>
                 <li>Country : {{ movie.country }}</li>
-                <li>Genre : {{ movie.genres|join(', ') }}</li>
+                <li>Genre : {{ movie.genres|map(genre => genre.name)|join(', ') }}</li>
             </ul>
         {% else %}
             <h1>Movie not found</h1>
