--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -10,6 +10,10 @@
     <ul>
         <li>Your controller at <code><a href="{{ '/home/benjamin/Dev/sl/formations/sensiotvbis/src/Controller/HelloController.php'|file_link(0) }}">src/Controller/HelloController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/benjamin/Dev/sl/formations/sensiotvbis/templates/hello/index.html.twig'|file_link(0) }}">templates/hello/index.html.twig</a></code></li>
+        {#{% for letter in 'A'..'Z' %}
+            <li>{{ loop.index }} : {{ letter }}</li>
+        {% endfor %}#}
     </ul>
+    <img src="{{ asset('build/images/31116_JssY.jpeg') }}" alt="image">
 </div>
 {% endblock %}
